[gd_scene load_steps=14 format=2]

[ext_resource path="res://ASSETS/HUD/Pause.gd" type="Script" id=1]
[ext_resource path="res://ASSETS/Fonts/tf2build.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://ASSETS/UI Features/Char Select.tscn" type="PackedScene" id=3]
[ext_resource path="res://ASSETS/UI Features/Resume.tscn" type="PackedScene" id=4]
[ext_resource path="res://ASSETS/TitleScreen/Buttons/Pointer.tscn" type="PackedScene" id=5]
[ext_resource path="res://ASSETS/UI Features/Main Menu.tscn" type="PackedScene" id=6]
[ext_resource path="res://ASSETS/HUD/Panel.gd" type="Script" id=7]
[ext_resource path="res://ASSETS/UI Features/Resume.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 128
outline_size = 5
outline_color = Color( 0.145098, 0.145098, 0.164706, 1 )
use_filter = true
extra_spacing_top = 9
extra_spacing_bottom = -17
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 70
outline_size = 5
outline_color = Color( 0.145098, 0.145098, 0.164706, 1 )
use_filter = true
extra_spacing_top = 9
extra_spacing_bottom = -17
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 128
outline_size = 5
outline_color = Color( 0.145098, 0.145098, 0.164706, 1 )
use_filter = true
extra_spacing_top = 9
extra_spacing_bottom = -17
font_data = ExtResource( 2 )

[sub_resource type="GDScript" id=4]
script/source = "extends Button

export var path = ''


func _on_Button_pressed():
	if (path != ''):
		get_tree().paused = false
		get_tree().change_scene(path)
"

[sub_resource type="DynamicFont" id=5]
size = 128
outline_size = 5
outline_color = Color( 0.145098, 0.145098, 0.164706, 1 )
use_filter = true
extra_spacing_top = 9
extra_spacing_bottom = -17
font_data = ExtResource( 2 )

[node name="Pause" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0.5 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" parent="Panel" instance=ExtResource( 4 )]
margin_left = 220.885
margin_top = -619.28
margin_right = 955.885
margin_bottom = -493.28
custom_fonts/font = SubResource( 1 )
script = ExtResource( 8 )

[node name="Button2" parent="Panel" instance=ExtResource( 3 )]
margin_left = 221.882
margin_top = -457.802
margin_right = 956.882
margin_bottom = -331.802
custom_fonts/font = SubResource( 2 )
path = "res://CSS.tscn"

[node name="Title" parent="Panel" instance=ExtResource( 6 )]
margin_left = 219.35
margin_top = -304.816
margin_right = 954.35
margin_bottom = -178.816
custom_fonts/font = SubResource( 3 )
script = SubResource( 4 )
path = "res://TitleScreen.tscn"

[node name="Label" type="Label" parent="Panel"]
margin_left = 10.0
margin_top = 4.0
margin_right = 522.0
margin_bottom = 124.0
custom_fonts/font = SubResource( 5 )
text = "paused"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pointer" parent="Panel" instance=ExtResource( 5 )]
position = Vector2( 1578.61, 518.271 )

[connection signal="pressed" from="Panel/Resume" to="Panel/Resume" method="_on_Control_pressed"]
