[gd_scene load_steps=6 format=2]

[ext_resource path="res://ASSETS/Fonts/tf2build.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ASSETS/UI Features/Resume.gd" type="Script" id=2]
[ext_resource path="res://ASSETS/Fonts/Stock_52.tres" type="DynamicFont" id=3]

[sub_resource type="DynamicFont" id=1]
size = 128
outline_size = 5
outline_color = Color( 0.145098, 0.145098, 0.164706, 1 )
use_filter = true
extra_spacing_top = 9
extra_spacing_bottom = -17
font_data = ExtResource( 1 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 367.645, 63.1265 )

[node name="Resume" type="Button"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 222.346
margin_top = -323.802
margin_right = 957.346
margin_bottom = -197.802
custom_fonts/font = SubResource( 1 )
flat = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="RESUME" type="Area2D" parent="."]
collision_layer = 65536
collision_mask = 524288
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="RESUME"]
position = Vector2( 368.163, 63.4857 )
shape = SubResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = -1.0
margin_top = -2.0
margin_right = 738.0
margin_bottom = 128.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0.639216, 0, 1, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 4
text = "Resume"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="focus_entered" from="." to="." method="_on_Resume_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_Resume_focus_exited"]
[connection signal="area_entered" from="RESUME" to="." method="_on_RESUME_area_entered"]
[connection signal="area_exited" from="RESUME" to="." method="_on_RESUME_area_exited"]
